# career_alter_ego_chat

./: .gitignore  README.md  app.py  pyproject.toml  rag.py
src/main/python/: app.py  classes.py  utils_and_tools.py
src/main/python/resources/: summary.txt
tests/: test_me.py
